# AI-Powered-Supply-Chain-Data-Quality-and-BOM-Remediation-Platform

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PROJECT_STATUS.md  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  snowflake-validation.yml
api/app/: auth.py  main.py
api/tests/: test_api.py
data_generator/: __init__.py  cli.py  orchestrator.py  reference.py
data_generator/config/: __init__.py  profiles.py
data_generator/documents/: __init__.py  quote_pdf.py
data_generator/generators/: __init__.py  bom.py  context.py  masters.py  operations.py
data_generator/injectors/: __init__.py  engine.py
dbt_supply_chain/: .user.yml  dbt_project.yml  profiles.yml
dbt_supply_chain/macros/: generate_schema_name.sql  normalize_text.sql
dbt_supply_chain/snapshots/: part_master_snapshot.sql
docs/: ai-governance.md  api-guide.md  architecture-decisions.md  business-case.md  data-dictionary.md  demo-script.md  dq-rule-catalog.md  final-verification-report.md  handoff.md  limitations.md  model-card.md  security-model.md
docs/architecture/: overview.md
docs/diagrams/: erd.md
docs/screenshots/: README.md  manifest.json
evaluation/: claim-verification.json
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  (+3 more)
powerbi/: BUILD_POWER_BI.md
scripts/: benchmark.py  capture_screenshots.py  deploy_snowflake.py  evaluate_detection.py  evaluate_entity_resolution.py  export_powerbi_data.py  run_local_pipeline.py  train_entity_resolution.py  validate_clean_baseline.py  validate_real_ai_provider.py
(+135 files in other folders)
