[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bom-guardian"
version = "0.1.0"
description = "AI-Powered Supply Chain Data Quality and BOM Remediation Platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Darshita Patel" }]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "duckdb>=1.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "networkx>=3.3",
    "typer>=0.12",
    "structlog>=24.1",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
]
ml = [
    "scikit-learn>=1.5",
]
docs-ai = [
    "reportlab>=4.2",
    "pypdf>=4.2",
]
snowflake = [
    "snowflake-connector-python>=3.10",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "api", "data_generator", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "api/tests"]
addopts = "-q"
markers = [
    "integration: integration tests (may be slower)",
    "e2e: end-to-end pipeline tests",
    "performance: performance measurement tests",
]
